Fix launch scripts