@@ -1,3 +1,4 @@
 #!/bin/sh
 DIR=${0%/*}/../bin
-(cd $DIR && ./java -Xms64M -Xmx128M -p ../modules -m org.sheepy.vsand/org.sheepy.vsand.VSandHeadlessBenchmarkLauncher  $@)
+ARGS="-Xms64M -Xmx128M --enable-preview"
+(cd $DIR && ./java $ARGS -p ../modules -m org.sheepy.vsand/org.sheepy.vsand.VSandHeadlessBenchmarkLauncher $@)
