@@ -1,4 +1,5 @@
 @echo off
 set DIR="%~dp0\bin"
 set JAVA_EXEC="%DIR:"=%\java"
-pushd %DIR% & %JAVA_EXEC% -Xms32M -Xmx64M -p ..\modules -Xscmx32M -Xshareclasses:cacheDir=sharedClasses,name=VSand,nonfatal -m org.sheepy.vsand/org.sheepy.vsand.VSandApplicationLauncher  %* & popd
+set ARGS="-Xms32M -Xmx64M --enable-preview"
+pushd %DIR% & %JAVA_EXEC% %ARGS% -p ..\modules -m org.sheepy.vsand/org.sheepy.vsand.VSandApplicationLauncher  %* & popd
